--- a/css/style.css
+++ b/css/style.css
@@ -162,20 +162,28 @@ footer{
     padding: 20px;
 }
 
-a{
-    text-decoration: none;
-}
-
 .sfondo{
-    background-image:url(./img/jumbo.png);
-    background-size: contain;
+    background-image: url(/img/jumbo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .intestazioneprincipale{
+    padding: 5px;
     height: 200px;
     width: 500px;
     text-align: center;
     line-height: 20px;
     color: #fff;
     display: inline-block;
+    
+}
+
+
+a{
+    text-decoration: none;
+}
+
+h1{
+    margin-bottom: 30px;
 }
