--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ li{
     
 }
 
+
 .item{
     width: 300px;
     height: 300px;
@@ -100,8 +101,8 @@ li{
 }
 
 .biggest-square{
-    width: 60%px;
-    height: 80%;
+    width: 100%;
+    height: 300px;
     background-color: green;
 }
 
@@ -191,4 +192,21 @@ h1{
 
 .space-around{
     justify-content: space-around;
+}
+
+.col-100{
+    width: 100%;
+}
+
+.col{
+    flex-direction: column;
+}
+
+.text-align{
+    text-align: center;
+}
+
+.stelle{
+    background-image: url(../img/stars.svg);
+    background-repeat: no-repeat;
 }
