--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 .container{
-    display: flex;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -270,14 +269,14 @@ h1{
     justify-content: center;
 }
 
-hr{
-    border: #255EE9;
-}
-
 h1{
     font-size: 40px;
 }
 
 .vertical-align{
     vertical-align: middle;
+}
+
+.bordo-blue{
+    border-color: #255EE9;
 }
