--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,19 @@
 }
 
 .mar-top{
-    margin-top: 20px;
+    margin-top: 30px;
+}
+
+.mar-left{
+    margin-left: 20px;
+}
+
+.mar-logo{
+    margin-right: 4px;
+}
+
+.mar-body{
+    margin-top: 350px;
 }
 
 .py-bot{
@@ -22,18 +34,10 @@
     padding: 20px;
 }
 
-
 .pad-top{
     padding-top: 150px;
 }
 
-.mar-logo{
-    margin-right: 4px;
-}
-
-.mar-body{
-    margin-top: 350px;
-}
 /* spaziatura */
 
 .inline-block{
@@ -108,7 +112,7 @@ li{
     max-width: 600px;
     padding: 5px;
     text-align: center;
-    line-height: 20px;
+    line-height: 30px;
     color: #fff;
     
 }
@@ -125,19 +129,6 @@ li{
     text-align: left;
     line-height: 20px;
     justify-content: flex-end;
-}
-
-
-.smaller-square{
-    width: 40%;
-    height: 150px;
-    background-color: pink;
-}
-
-.biggest-square{
-    width: 100%;
-    height: 300px;
-    background-color: green;
 }
 
 .big-col{
@@ -163,12 +154,19 @@ li{
         justify-content: center;
 }
 
-.scarica-per-mac{
+.scarica-per-mac-top{
+    background: #fff;
+    color: #24242d;
+}
+
+.scarica-per-mac-bot{
     background: #7289DA;
     color: white;
-    border-radius: 20px;
-    padding: 10px;
-    border: 0px;
+}
+
+#button-header{
+    background: #24242d;
+    color: #fff;
 }
 
 footer{
@@ -201,8 +199,9 @@ footer{
 }
 
 .button{
-    background-color: rosybrown;
-    padding: 3px;
+    border-radius: 20px;
+    padding: 10px;
+    border: 0px;
 }
 
 h1{
@@ -264,4 +263,8 @@ p{
 
 .bordo-blue{
     border-color: #255EE9;
+}
+
+p{
+    line-height: 30px;
 }
